Prevent scrollbar on theme preview page

--- a/templates/admin/assets/css/filecanvas-admin.css
+++ b/templates/admin/assets/css/filecanvas-admin.css
@@ -989,6 +989,7 @@ footer.content-footer {
 	left: 0;
 	right: 0;
 	bottom: 0;
+	overflow: hidden;
 }
 @media screen and (max-width: 767px) {
 	.theme-gallery-main {
